# mapedit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dialog_mockup.json  dialogs.csv  mapedit.conf  old_dialogy.json  old_dialogy.yaml  package.json  server.js  skeldal.ini
public/: distributor.js  index.html  keybcs2.js  map_styles.css  pcxtest.html  styles.css  testview.html
src/: version.in.h
src/miniserver/: CMakeLists.txt  config.hpp  ddlman.cpp  ddlman.hpp  handler_map.cpp  handler_map.hpp  ini_file.hpp  interface.cpp  interface.hpp  langfiles.cpp  langfiles.hpp  main.cpp  mgifcomp.cpp  mgifcomp.hpp  mgifdecomp.cpp  mgifdecomp.hpp  publish_helper.cpp  publish_helper.hpp  publisher.cpp  publisher.hpp  runsteam.cpp  runsteam.hpp  server.cpp  server.hpp  skeldal_exe.cpp  skeldal_exe.hpp  steamservice.cpp  steamservice.hpp  steamservice_steam.cpp  steamservice_steam.hpp  webpage.cpp  webpage.hpp  wsrpc.cpp  wsrpc.hpp
src/miniserver/utils/: base64.hpp  fast_copy_file.cpp  fast_copy_file.h  flatmap.hpp  function_view.hpp  getoptxx.h  http_utils.hpp  inline_function.hpp  json.hpp  lzw.c  lzw.h  mgifcreate.cpp  mgifcreate.hpp  mgifmem.c  mgifmem.h  overloaded.hpp  process.hpp  profile_path.cpp  profile_path.hpp  sha1.hpp  stack_alloc.hpp  unique_handle.hpp  utf8.hpp  websocket.h  zip_writer.hpp
src/web/: .env  .gitignore  CMakeLists.txt  generate-vue-deps.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/web/public/: DIALOGY.JSON  dialogs.peggy  dlg_commands.md
src/web/src/: App.vue  main.ts
src/web/src/assets/: main.css  map.css
src/web/src/components/: AbilitySheet.vue  AssetToolIcons.vue  AssetToolSeq.vue  AssetsDDLManage.vue  AssetsEnemyUploader.vue  AssetsFloorAndCeil.vue  AssetsFontsViewer.vue  AssetsHiView.vue  AssetsList.vue  AssetsPcxView.vue  AssetsToolCol.vue  AssetsToolMGF.vue  AssetsToolUpload.vue  BitCheckbox.vue  BookEditor.vue  CanvasView.vue  CombineItems.vue  DelayLoadedList.vue  DialogDecompiler.vue  DlgCodeEditor.vue  DlgConstsEditor.vue  DlgLayoutEditor.vue  EffectSheet.vue  EncDecomp.vue  FactEditor.vue  FileHistory.vue  GameClientCfgDlg.vue  HexView.vue  ItemList.vue  MagicAttackSheet.vue  MapSelectDlg.vue  MapSettingsDlg.vue  MaskedInput.vue  MissingFiles.vue  MultiactionEditor.vue  MusicPlayer.vue  PaletteEditDlg.vue  PaletteItemList.vue  PalleteEditor.vue  PlaylistEditor.vue  (+8 more)
src/web/src/components/tools/: MissingFiles.vue  ProgressBarView.vue  ToggleButton.vue  missingFiles.ts  progressBar.ts
src/web/src/core/: IconLIB.ts  action_script.js  api.ts  asset_groups.ts  bb2html.ts  binary.ts  bitproxy.ts  character_structs.ts  code.js  col_palette_set.ts  colors.ts  common_defs.ts  dialog_structs.ts  distributor.js  distributor.ts  dosname.ts  enemy_phases.ts  enemy_struct.ts  factdb.ts  flags.ts  fonts.ts  game_control.ts  geometry.ts  hiformat.ts  image_manip.ts  ini.ts  items_struct.ts  keybcs2.ts  languages.ts  lut.ts  map_draw.ts  map_structs.ts  parser.d.ts  pcx.ts  pcx_profle.ts  publis_tags.ts  read_file.ts  seqfile.ts  services.ts  shop_structs.ts  (+11 more)
src/web/src/directives/: autoresize.ts  autosvgsize.ts  svgellipsis.ts  watch_range.ts
src/web/src/peggy/: dialogs.peggy  parser.d.ts
src/web/src/router/: index.ts
src/web/src/utils/: binary.js  browse_file.ts  datalist.ts  document.ts  draw_map.js  global.ts  global_dialog_list.ts  global_enemy_list.ts  global_item_list.ts  global_shop_list.ts  hive.ts  madiff.ts  map_format.js  messageBox.ts  messageBoxComponent.vue  sound.ts  svg.ts
src/web/src/views/: AssetsManager.vue  BasicInfo.vue  CharacterEditor.vue  DialogsEditor.vue  EnemiesEditor.vue  FactsDB.vue  HomeView.vue  ItemsEditor.vue  MapEditor.vue  NicheEditor.vue  ShopsEditor.vue  SpellsEditor.vue  StatusBar.vue  StatusBar.vue.old  TestView.vue  TranslationTools.vue
src/webarch/: CMakeLists.txt  builder.cpp
